--- a/app/src/main/res/layout/grditm_deadplant.xml
+++ b/app/src/main/res/layout/grditm_deadplant.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/DRK_BG_SHADE"
+    android:background="@color/LGT_BG_SHADE"
     android:padding="4dp"
     android:paddingBottom="16dp">
 
@@ -12,28 +12,27 @@
         android:id="@+id/TV_grditm_deadplant_name"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textStyle="bold"
         android:typeface="monospace"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_deadplant_photo"
-        app:layout_constraintStart_toStartOf="@+id/IV_grditm_plantroll_photo"
         app:layout_constraintTop_toBottomOf="@+id/IV_grditm_deadplant_photo" />
 
     <TextView
         android:id="@+id/TV_grditm_deadplant_type"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_name"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_name"
@@ -43,12 +42,12 @@
         android:id="@+id/TV_grditm_deadplant_timeframe"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_type"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_type"
@@ -58,12 +57,12 @@
         android:id="@+id/TV_grditm_deadplant_cod"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/TV_grditm_deadplant_timeframe"
         app:layout_constraintStart_toStartOf="@+id/TV_grditm_deadplant_timeframe"
@@ -73,12 +72,12 @@
         android:id="@+id/TV_grditm_deadplant_lifecyclestate"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="textStart"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_deadplant_photo"
         app:layout_constraintStart_toStartOf="@+id/IV_grditm_deadplant_photo"
@@ -88,7 +87,7 @@
         android:id="@+id/IV_grditm_deadplant_photo"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="@dimen/ROLL_PIC_HEIGHT"
-        android:background="@color/DRK_BG_SHADE"
+        android:background="@color/LGT_BG_SHADE"
         android:padding="2dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
