--- a/app/src/main/res/layout/grditm_plantroll_photo.xml
+++ b/app/src/main/res/layout/grditm_plantroll_photo.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/DRK_BG_SHADE"
+    android:background="@color/LGT_BG_SHADE"
     android:padding="4dp"
     android:paddingBottom="16dp">
 
@@ -12,7 +12,7 @@
         android:id="@+id/IV_grditm_plantroll_photo"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="@dimen/ROLL_PIC_HEIGHT"
-        android:background="@color/DRK_BG_SHADE"
+        android:background="@color/LGT_BG_SHADE"
         android:padding="2dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,12 +23,12 @@
         android:id="@+id/TV_grditm_plantroll_name"
         android:layout_width="@dimen/ROLL_PIC_HEIGHT"
         android:layout_height="wrap_content"
-        android:background="@color/DRK_BG_MAIN"
+        android:background="@color/LGT_BG_MAIN"
         android:fontFamily="@font/almendra_display"
         android:padding="2dp"
         android:text="TextView"
         android:textAlignment="center"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/IV_grditm_plantroll_photo"
