--- a/app/src/main/res/layout/dlg_attachcomment.xml
+++ b/app/src/main/res/layout/dlg_attachcomment.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/DRK_BG_SHADE"
+    android:background="@color/LGT_BG_SHADE"
     android:padding="16dp">
 
     <EditText
@@ -15,7 +15,7 @@
         android:inputType="text"
         android:selectAllOnFocus="true"
         android:text="Name"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
