--- a/app/src/main/res/layout/incl_title_value.xml
+++ b/app/src/main/res/layout/incl_title_value.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="2dp"
         android:fontFamily="@font/almendra"
         android:text="TextView"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -29,7 +29,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/almendra"
         android:text="TextView"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/TV_incl_titval_tit"
