--- a/app/src/main/res/layout/incl_title_value_smol.xml
+++ b/app/src/main/res/layout/incl_title_value_smol.xml
@@ -15,7 +15,7 @@
         android:layout_marginBottom="16dp"
         android:fontFamily="@font/almendra_display"
         android:text="TextView"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +28,7 @@
         android:layout_marginStart="8dp"
         android:fontFamily="@font/almendra_display"
         android:text="TextView"
-        android:textColor="@color/DRK_TXT"
+        android:textColor="@color/LGT_TXT"
         android:textSize="16sp"
         android:textStyle="italic"
         app:layout_constraintBottom_toBottomOf="@+id/TV_incl_titvalsmol_tit"
