--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,14 +3,20 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="DRK_BG_MAIN">#FF4F6F67</color>
+    <color name="DRK_BG_MAIN">#FF84938C</color>
     <color name="DRK_BG_SHADE">#FF2D3F47</color>
+
+    <color name="LGT_BG_MAIN">#FFF6F0E2</color>
+    <color name="LGT_BG_SHADE">#FFB4C198</color>
 
     <color name="DRK_PRIM">#FFC475D0</color>
     <color name="DRK_SCND">#FF453A5A</color>
 
     <color name="DRK_TXT">#FFFAFAEB</color>
     <color name="DRK_TXT_INV">#FF262A40</color>
+
+    <color name="LGT_TXT">#FF302F45</color>
+    <color name="LGT_TXT_INV">#FFFFFBF3</color>
 
     <color name="DRK_ACC1">#FFC6456E</color>
     <color name="DRK_ACC2">#FF7CA4D9</color>
@@ -20,4 +26,6 @@
     <color name="DRK_ACC5">#FFD54780</color>
     <color name="DRK_ACC6">#FF9CBF5C</color>
     <color name="DRK_GRAYOUT">#FF93CEC0</color>
+
+    <color name="LGT_GRAYOUT">#FF546F7B</color>
 </resources>
